# monitor-switcher

./: .gitignore  README.md
.claude/: settings.local.json
MonitorSwitcher/MonitorSwitcher/: MonitorSwitcher.csproj  Program.cs
MonitorSwitcherGUI/: MonitorSwitcherGUI.sln
MonitorSwitcherGUI/MonitorSwitcherGUI/: MonitorSwitcherGUI.csproj  Program.cs
MonitorSwitcherGUIConfig/: MainWindow.cs  MonitorSwitcherGUIConfig.csproj
docs/: testing-guide.md
monitor-switcher-tauri/: index.html  package.json  pnpm-lock.yaml  popup.html  vite.config.ts
monitor-switcher-tauri/src/: App.css  App.tsx  SavePopup.tsx  popup.tsx  types.ts
monitor-switcher-tauri/src-tauri/: Cargo.toml  tauri.conf.json
monitor-switcher-tauri/src-tauri/capabilities/: default.json
monitor-switcher-tauri/src-tauri/icons/menu/util/: png_to_ico.py
monitor-switcher-tauri/src-tauri/src/: lib.rs  main.rs
monitor-switcher-tauri/src-tauri/src/ccd/: api.rs  matcher.rs  mod.rs  types.rs
monitor-switcher-tauri/src-tauri/src/display/: mod.rs
monitor-switcher-tauri/src-tauri/src/display/linux/: edid.rs  mod.rs  types.rs  xrandr.rs
monitor-switcher-tauri/src-tauri/src/display/windows/: api.rs  matcher.rs  mod.rs  types.rs
monitor-switcher-tauri/src-tauri/src/profile/: convert.rs  linux.rs  mod.rs  storage.rs  types.rs
monitor-switcher-tauri/src/components/: MonitorDiagram.tsx  ProfileItem.tsx  ProfileList.tsx
monitor-switcher-wails/: app.go  go.mod  go.sum  main.go  wails.json
monitor-switcher-wails/frontend/: index.html  package.json  package.json.md5  pnpm-lock.yaml
(+21 files in other folders)
