[package]
name = "monitor-switcher-tauri"
version = "0.1.0"
description = "Monitor profile switcher - save and restore display configurations"
authors = ["Leonardo Manrique"]
edition = "2021"

[lib]
name = "monitor_switcher_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_UI_WindowsAndMessaging",
] }
